# Remote-execution-server

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  config.h
src/client/: main.c
src/server/: logger.c  logger.h  main.c
src/stat/: main.c  obj_list.c  obj_list.h
